--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose-unique-validator": "^3.1.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
+    "nodemailer-express-handlebars": "^6.0.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
